Project npm build

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+  <link rel="icon"
+    href="https://res.cloudinary.com/dk0r9bcxy/image/upload/v1632946544/portfolio-website/Screenshot_2021-09-29_at_21.14.59_d5tjpu.png" />  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   <script src="https://kit.fontawesome.com/aaf63d8dd4.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GA-LDN React Template</title>
+  <title>Sorting Visualizer</title>
 </head>
 
 <body>
